--- a/3/assetes/3.css
+++ b/3/assetes/3.css
@@ -33,6 +33,9 @@
   top:39px;
   right:-120px;
 }
+.carousel-caption{  
+  top:30vh;   
+}
 
 @media (max-width: 1200px) {
   .absolute{
@@ -40,3 +43,4 @@
   }
   
 }
+
