--- a/4/assets/4.css
+++ b/4/assets/4.css
@@ -44,12 +44,12 @@ header:after,
   color: gray;
 }
 .header:nth-child(3) {
-  margin-left: 30px;
-  padding: 30px;
+  margin-left: 160px;
+  /* padding: 30px; */
+  margin-top:16px;
 }
-.header:nth-child(3) input {
-  color: gray;
-  border: 0px solid lightgray;
+.dropbtn img {
+vertical-align: middle;
 }
 .header:nth-child(4) {
   border-left: 1px solid gray;
@@ -67,6 +67,58 @@ header:after,
 }
 .nav div:first-child {
   margin-right: 975px;
+}
+/* The dropdown container */
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+/* Dropdown button */
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: gray;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  margin: 0; /* Important for vertical align on mobile phones */
+}
+
+/* Add a red background color to navbar links on hover */
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: darkgray;
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 
 /* a {
